--- a/public/mop/index.html
+++ b/public/mop/index.html
@@ -83,7 +83,7 @@ Con tus respuestas podemos ir generando una identidad colectiva entre todos.">
 <!-- Dependencies -->
 <script src='js/libs/jquery-1.10.2.min.js''></script>
 <script src='//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js'></script>
-<script src="https://latin-x-map.herokuapp.com"></script>
+<script src="https://latin-x-map.herokuapp.com/socket.io/socket.io.js"></script>
 <script src='js/libs/angular/angular.min.js'></script>
 
 <script src='js/libs/angular/angular-animate.min.js'></script>
