--- a/public/mop/index.html
+++ b/public/mop/index.html
@@ -98,6 +98,7 @@ Con tus respuestas podemos ir generando una identidad colectiva entre todos.">
 <script src='js/check/question.js'></script>
 <script src='js/check/end.js'></script>
 <script src='js/check/stats.js'></script>
+<script src='js/check/result.js'></script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142467879-1"></script>
